tests/cases/parse_error/6_const_stmt_in_block.rs
#![allow(dead_code)]
#[macro_use]
extern crate nest_struct;

#[nest_struct]
struct Nested {
    id: u32,
    name: nest! {
        const NAME: &str = "John Doe";
    },
}

fn main() {}
