tests/cases/parse_error/6_const_stmt_in_block.stderr
error: only struct and enum are supported inside nest! block
 --> tests/cases/parse_error/6_const_stmt_in_block.rs:9:9
  |
9 |         const NAME: &str = "John Doe";
  |         ^^^^^
